--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2482,24 +2482,19 @@ a {
     margin-right: 0;
     position: absolute;
     bottom: 0;
+    width: 100%;
   }
 
   .app-game__lost-piece { 
     height: 20px;
   }
 
-  .app-game__lost-pieces-group--knight {
-    float: left;
-  }
-
-  .app-game__lost-pieces-group--rook {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
-
+  .app-game__lost-pieces-group--bishop,
+  .app-game__lost-pieces-group--knight,
+  .app-game__lost-pieces-group--rook,
   .app-game__lost-pieces-group--queen {
-    display: block;
+    width: 50%;
+    display: inline-block;
     margin-top: 4px;
   }
 
