--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1784,27 +1784,18 @@ a {
 }
 
 .app-game__toggle-count {
-  position: relative;
-  display: inline-block;
+  position: absolute;
+  height: 8px;
+  line-height: 8px;
+  top: -4px;
+  right: -4px;
   background-color: #DB4437;
   color: #fff;
-  width: 48px;
-  height: 24px;
-  text-align: center;
-  line-height: 24px;
   font-size: 12px;
-}
-
-.app-game__toggle-count:before {
-  position: absolute;
-  top: 0;
-  left: -5px;
-  content: '';
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 0 5px 5px 0;
-  border-color: transparent #DB4437 transparent transparent;
+  padding: 4px;
+  opacity: 1;
+  border-radius: 3px;
+  z-index: 10;
 }
 
 .app-game__toggle-content {
@@ -3033,6 +3024,11 @@ a {
     left: 0;
   }
 
+  .app-game__toggle-count {
+    top: 2px;
+    right: 2px;
+  }
+
   .app-game__toggle-head--phone .app-game__toggle-icon--phone:nth-of-type(2) {
     border-left: 0;
     left: 40px;
@@ -3128,12 +3124,6 @@ a {
 
   .app-game__toggle .app-game__toggle-content--messages {
     height: calc(100% - 73px);
-  }
-
-  .app-game__toggle-count--phone {
-    display: inline-block;
-    height: 100%;
-    width: 65px;
   }
 
   .app-game__toggle-icon--color {
