--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2395,21 +2395,6 @@ a {
   }
 }
 
-@media screen and (max-width: 1645px) {
-  .app-game__toggle {
-    width: 36px;
-    overflow: hidden;
-  }
-
-  .app-game__toggle.show {
-    width: 350px;
-  }
-
-  .app-game__toggle .app-game__toggle-icon--action {
-    display: none;
-  }
-}
-
 @media screen and (min-width: 949px) and (max-height: 949px) {
 
   .app-head--game {
@@ -2756,6 +2741,22 @@ a {
   .mdl-cell--6-col, .mdl-cell--6-col-tablet.mdl-cell--6-col-tablet {
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 746px) and (max-width: 1645px) {
+
+  .app-game__toggle {
+    width: 36px;
+    overflow: hidden;
+  }
+
+  .app-game__toggle.show {
+    width: 350px;
+  }
+
+  .app-game__toggle .app-game__toggle-icon--action {
+    display: none;
   }
 }
 
