--- a/public/app/profile/templates/modal-profile.html
+++ b/public/app/profile/templates/modal-profile.html
@@ -14,20 +14,23 @@
             </div>
             {{ profile.name }}
         </div>
-        <div class="app-modal__content" ng-if="profile">
+        <div class="app-modal__content">
             <profile-actions></profile-actions>
-            <profile-game game-type="'blitz'" game-data="profile.blitz"></profile-game>
-            <profile-game game-type="'rapid'" game-data="profile.rapid"></profile-game>
+            <profile-game ng-if="profile" game-type="'blitz'" game-data="profile.blitz"></profile-game>
+            <profile-game ng-if="profile" game-type="'rapid'" game-data="profile.rapid"></profile-game>
             <div class="app-profile__more">
-                <a ng-href="/profile/{{ profile.uid }}#games" 
+                <a modal-close
+                   ng-href="/profile/{{ profile.uid }}#games" 
                    class="app-button mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
                    ng-bind="'games'|translate">
                 </a>
-                <a ng-href="/profile/{{ profile.uid }}#trophies" 
+                <a modal-close
+                   ng-href="/profile/{{ profile.uid }}#trophies" 
                    class="app-button mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
                    ng-bind="'trophies'|translate">
                 </a>
-                <a ng-href="/profile/{{ profile.uid }}"
+                <a modal-close
+                   ng-href="/profile/{{ profile.uid }}"
                    class="app-profile__link mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
                     <i class="app-icon material-icons">more_horiz</i>
                 </a>
