--- a/public/app/profile/templates/profile.html
+++ b/public/app/profile/templates/profile.html
@@ -30,7 +30,7 @@
      class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col"
      ng-repeat="game in games track by $index">
     <div class="app-profile__game">
-        <div class="app-profile__game-board">
+        <a ng-href="/game/{{ game._id }}" class="app-profile__game-board">
             <div ng-repeat="number in numbers" class="app-game__row">
                 <div 
                     ng-repeat="letter in letters" 
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </a>
         <div class="app-profile__game-content">
             <div class="app-profile__game-infos">
                 <div class="app-profile__game-type">
@@ -55,42 +55,55 @@
                     <i class="app-icon material-icons">schedule</i>
                     <span>{{ game.data.time / 60000 }} + {{ game.data.increment / 1000 }}</span>
                     <i class="app-icon material-icons">games</i>
-                    <span ng-if="game.data.result.value === 1">1-0</span>
-                    <span ng-if="game.data.result.value === 0">½-½</span>
-                    <span ng-if="game.data.result.value === 2">0-1</span>
+                    {{ game.data.result.name | translate }}
                 </div>
                 <div class="app-profile__game-date">
                     <i class="app-icon material-icons">today</i>
                     <span>{{ game.data.startTime|localeDateTime }}</span>
                 </div>
             </div>
-            <div class="app-profile__game-result">{{ game.data.result.name | translate }}</div>
-            <div class="app-profile__game-player">
-                <span class="app-profile__game-name">{{ game.data.white.name }}</span>
+            <div class="app-profile__game-result"
+                 ng-class="{
+                    'app-text__positive': game.data.white.uid === profile.uid && game.data.white.isWinner || game.data.black.uid === profile.uid && game.data.black.isWinner,
+                    'app-text__negative': game.data.white.uid === profile.uid && game.data.black.isWinner || game.data.black.uid === profile.uid && game.data.white.isWinner 
+                 }">
+                <span ng-if="game.data.result.value === 1">1-0</span>
+                <span ng-if="game.data.result.value === 0">½-½</span>
+                <span ng-if="game.data.result.value === 2">0-1</span>
+            </div>
+
+            <div class="app-profile__game-player"
+                 show-profile="game.data.white.uid">
+                <span class="app-profile__game-name">
+                    {{ game.data.white.name }}
+                </span>
                 <div class="app-profile__game-avatar" ng-class="{'is-winner': game.data.white.isWinner}">
-                    <i ng-if="game.data.white.isWinner" class="material-icons">star</i>
+                    <i ng-if="game.data.white.isWinner" class="app-icon app-icon--star material-icons">star</i>
                     <img avatar class="app-avatar" ng-src="{{ game.data.white.avatar }}">
-                    <i ng-if="game.data.white.isWinner" class="material-icons">star</i>
+                    <i ng-if="game.data.white.isWinner" class="app-icon app-icon--star material-icons">star</i>
                 </div>
                 <div class="app-profile__game-points">
                     {{ game.data.white.points }} 
                     <span class="app-profile__game-player-points-add"
-                          ng-class="{'app-text__positive': game.white.resultPoints > 0, 'app-text__negative': game.white.resultPoints < 0 }">
+                          ng-class="{'app-text__positive': game.data.white.resultPoints > 0, 'app-text__negative': game.data.white.resultPoints < 0 }">
                         {{ game.data.white.resultPoints | relativeNumber }}
                     </span>
                 </div>
             </div>
-            <div class="app-profile__game-player">
-                <span class="app-profile__game--name">{{ game.data.black.name }}</span>
+            <div class="app-profile__game-player"
+                 show-profile="game.data.black.uid">
+                <span class="app-profile__game-name">
+                      {{ game.data.black.name }}
+                </span>
                 <div class="app-profile__game-avatar" ng-class="{'is-winner': game.data.black.isWinner}">
-                    <i ng-if="game.data.black.isWinner" class="material-icons">star</i>
+                    <i ng-if="game.data.black.isWinner" class="app-icon app-icon--star material-icons">star</i>
                     <img avatar class="app-avatar" ng-src="{{ game.data.black.avatar }}">
-                    <i ng-if="game.data.black.isWinner" class="material-icons">star</i>
+                    <i ng-if="game.data.black.isWinner" class="app-icon app-icon--star material-icons">star</i>
                 </div>
                 <div class="app-profile__game-points">
                     {{ game.data.black.points }} 
                     <span class="app-profile__game-player-points-add"
-                          ng-class="{'app-text__positive': game.black.resultPoints > 0, 'app-text__negative': game.black.resultPoints < 0 }">
+                          ng-class="{'app-text__positive': game.data.black.resultPoints > 0, 'app-text__negative': game.data.black.resultPoints < 0 }">
                         {{ game.data.black.resultPoints | relativeNumber }}
                     </span>
                 </div>
