fix sortable icon

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3531,4 +3531,8 @@ a {
   .app-table__sortable .material-icons {
     font-size: 20px;
   }
+  
+  .app-table__sortable:after {
+    margin-left: 0;
+  }
 }
