--- a/public/css/style-ar.css
+++ b/public/css/style-ar.css
@@ -99,6 +99,14 @@
   text-align: left;
 }
 
+.app-game__timer {
+  float: left;
+}
+
+.app-game__player-avatar {
+  float: right;
+}
+
 .app-game__box {
   float: right;
 }
@@ -352,7 +360,7 @@
 }
 
 .app-profile__info {
-  margin-left: 10px;
+  margin-left: 6px;
   margin-right: initial;
 }
 
@@ -437,11 +445,9 @@
   padding-left: 36px;
 }
 
-.app-game__toggle-count:before {
-  border-width: 0 0 5px 5px;
-  border-color: transparent transparent transparent #DB4437;
-  right: -5px;
-  left: initial;
+.app-game__toggle-count {
+  right: initial;
+  left: -4px;
 }
 
 .app-game__lost-pieces {
@@ -449,6 +455,11 @@
   float: left;
   margin-left: 10px;
   margin-right: 0;
+}
+
+.app-table__sortable:after {
+  margin-left: 0;
+  margin-right: 4px;
 }
 
 .app-table--game-played tbody tr td.app-table--game-played-index, 
@@ -499,7 +510,7 @@
 
 .app-ranking__spinner {
   right: initial;
-  left: 10px;
+  left: 8px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -516,6 +527,43 @@
   .app-game__toggle--played {
     right: initial;
     left: 0;
+  }
+}
+
+@media screen and (min-width: 949px) and (max-height: 949px) {
+  .app-head--game {
+    right: initial;
+    left: 8px;
+  }
+
+  .app-profile--game .app-profile__info .app-icon {
+    font-size: 20px;
+    margin-left: 0;
+  }
+
+  .app-profile--game .app-profile__avatar {
+    margin-left: 0;
+  }
+
+  .app-game__timer {
+    float: none;
+  }
+
+  .app-game__player-avatar {
+    float: none;
+  }
+
+  .app-game__lost-pieces {
+    margin-left: 0;
+  }
+
+  .app-game__lost-pieces-group--knight {
+    float: right;
+  }
+
+  .app-game__lost-pieces-group--rook {
+    left: initial;
+    right: 0;
   }
 }
 
@@ -605,6 +653,10 @@
   .app-ranking__toggle-content .app-button:nth-child(2n +2) {
     float: left;
   }
+
+  .app-table__sortable:after {
+    margin-right: 0;
+  }
 }
 
 @media screen and (max-width: 599px) {
@@ -655,9 +707,8 @@
     border-left: 1px solid rgba(0,0,0,.12);
   }
 
-  .app-game__toggle-count--phone {
-    right: initial;
-    left: 0;
+  .app-game__toggle-count {
+    left: 2px;
   }
 
   .app-game__toggle-head--phone .app-game__toggle-icon--phone:nth-of-type(1) {
