--- a/public/css/style-ar.css
+++ b/public/css/style-ar.css
@@ -575,6 +575,20 @@
     left: initial;
     right: 0;
   }
+
+  @media screen and (min-height: 760px)  {
+    .app-layout.is-game .mdl-cell.app-head--game {
+      right: initial;
+      left: 8px;
+    }
+  }
+
+  @media screen and (max-height: 759px)  {
+    .app-layout.is-game .mdl-cell.app-head--game {
+      right: initial;
+      left: 4px;
+    }
+  }
 }
 
 @media (min-width: 840px) and (max-width: 1024px) {
