--- a/public/index.ejs
+++ b/public/index.ejs
@@ -318,48 +318,49 @@
           
         <div id="fb-root"></div>
 
-        <script src="https://apis.google.com/js/api.js"></script>
-        <script src="https://apis.google.com/js/plusone.js" async defer></script>
-
-        <script src="socket.io/socket.io.js"></script>
-
-        <script src="chess.js"></script>
-        <script src="utils.js"></script>
+        <script src="https://apis.google.com/js/api.js" async defer></script>
 
         <script src="lib/jquery.min.js"></script>
         <script src="lib/jquery-ui.min.js"></script>
-
         <script src="lib/progress-bar.min.js"></script>
-
         <script src="lib/material.min.js"></script>
-
         <script src="lib/angular.min.js"></script>
         <script src="lib/angular-route.min.js"></script>
         <script src="lib/angular-cookies.min.js"></script>
 
-        <script src="app/app.js"></script>
+        <% if (typeof env === 'string' && env === 'dev') { %>
 
-        <script src="app/global/global.module.js"></script>
+            <script src="socket.io/socket.io.js"></script>
 
-        <script src="app/facebook/facebook.module.js"></script>
+            <script src="chess.js"></script>
+            <script src="utils.js"></script>
 
-        <script src="app/google/google.module.js"></script>
+            <script src="app/app.js"></script>
 
-        <script src="app/components/components.module.js"></script>
-        <script src="app/components/components.services.js"></script>
-        <script src="app/components/components.directives.js"></script>
+            <script src="app/global/global.module.js"></script>
 
-        <script src="app/game/game.module.js"></script>
-        <script src="app/game/game.controllers.js"></script>
-        <script src="app/game/game.directives.js"></script>
+            <script src="app/facebook/facebook.module.js"></script>
 
-        <script src="app/home/home.module.js"></script>
-        <script src="app/home/home.controllers.js"></script>
+            <script src="app/google/google.module.js"></script>
 
-        <script src="app/ranking/ranking.module.js"></script>
-        <script src="app/ranking/ranking.controllers.js"></script>
+            <script src="app/components/components.module.js"></script>
+            <script src="app/components/components.services.js"></script>
+            <script src="app/components/components.directives.js"></script>
 
-        <script src="app/trophies/trophies.module.js"></script>
-        <script src="app/trophies/trophies.controllers.js"></script>
+            <script src="app/game/game.module.js"></script>
+            <script src="app/game/game.controllers.js"></script>
+            <script src="app/game/game.directives.js"></script>
+
+            <script src="app/home/home.module.js"></script>
+            <script src="app/home/home.controllers.js"></script>
+
+            <script src="app/ranking/ranking.module.js"></script>
+            <script src="app/ranking/ranking.controllers.js"></script>
+
+            <script src="app/trophies/trophies.module.js"></script>
+            <script src="app/trophies/trophies.controllers.js"></script>
+        <% } else { %>
+            <script src="web/js/app.min.js"></script>
+        <% } %>
     </body>
 </html>
