--- a/public/css/style.css
+++ b/public/css/style.css
@@ -663,7 +663,7 @@ a {
   width: 40px;
   height: 40px;
   background-size: cover;
-  background-image: url(../images/logo.png);
+  background-image: url(/images/logo.png);
   border-radius: 50%;
 }
 
