--- a/public/index.ejs
+++ b/public/index.ejs
@@ -324,8 +324,7 @@
           
         <div id="fb-root"></div>
 
-        <script src="https://apis.google.com/js/api.js" async defer></script>
-
+        <script src="https://apis.google.com/js/api.js"></script>
         <script src="lib/jquery.min.js"></script>
         <script src="lib/jquery-ui.min.js"></script>
         <script src="lib/progress-bar.min.js"></script>
