--- a/public/index.ejs
+++ b/public/index.ejs
@@ -139,7 +139,7 @@
                                 {{ 'create_game' | translate }}
                             </button>
                             <a href
-                               show-profile="user" 
+                               show-profile="user.uid" 
                                class="app-navigation__profile">
                                 <div class="app-navigation__profile-infos app-navigation__profile-infos--blitz"
                                      title="{{ 'blitz'|translate }}">
@@ -184,7 +184,7 @@
                 <span class="app-layout-title mdl-layout-title">
                     <a href
                        ng-click="closeDrawer()"
-                       show-profile="user" 
+                       show-profile="user.uid" 
                        class="app-navigation__profile">
                         <div class="app-navigation__profile-user">
                             <img avatar
@@ -364,6 +364,10 @@
 
             <script src="app/trophies/trophies.module.js"></script>
             <script src="app/trophies/trophies.controllers.js"></script>
+
+            <script src="app/profile/profile.module.js"></script>
+            <script src="app/profile/profile.controllers.js"></script>
+
         <% } else { %>
             <script src="web/js/app.min.js"></script>
         <% } %>
