--- a/public/css/style.css
+++ b/public/css/style.css
@@ -965,13 +965,65 @@ a {
   color: #FF9800;
 }
 
-.app-profile__action .app-icon--friend {
-  font-size: 32px;
+.app-profile__action .app-button {
+  margin-left: 8px;
+}
+
+.app-profile__more {
+  position: relative;
+  margin-top: 16px;
+}
+
+.app-profile__more .app-button {
+  margin-right: 8px;
+  color: #DB4437;
+}
+
+.app-profile__link {
+  float: right;
 }
 
 .app-profile--challenger {
   height: auto;
   margin: 32px 0 12px 0;
+}
+
+.app-card__profile-title {
+  position: relative;
+  height: 80px;
+  padding-bottom: 32px;
+  background-color: #795548;
+  color: #fff;
+}
+
+.app-card__profile-title .app-profile__action {
+  top: 16px;
+  right: 16px;
+}
+
+.app-card__profile-title .app-profile__action .app-button {
+  background-color: #5D4037;
+}
+
+.app-card__profile-title-text {
+  overflow: hidden;
+  height: 32px;
+}
+
+.app-card__profile-avatar {
+  position: absolute;
+  left: 28px;
+  top: 54px;
+}
+
+.app-card__profile-stats {
+  max-width: 500px;
+  margin: 0 auto;
+  padding-bottom: 24px;
+}
+
+.app-card__profile-actions .app-button.is-active {
+  color: #795548;
 }
 
 .app-avatar {
@@ -1086,7 +1138,7 @@ a {
   margin-right: 0;
 }
 
-.app-profile__game {
+.app-profile__info-game {
   margin-top: 20px;
 }
 
@@ -1158,6 +1210,102 @@ a {
 
 .app-profile__stat--losses .app-profile__stat-value {
   color: #F44336;
+}
+
+.app-profile__game {
+  cursor: pointer;
+  padding: 8px;
+  display: block;
+  position: relative;
+  color: initial;
+}
+
+.app-profile__game:after {
+  display: block;
+  content: '';
+  clear: both;
+}
+
+.app-profile__game-board {
+  width: 240px;
+  display: block;
+}
+
+.app-profile__game-content {
+  margin-left: 256px;
+  width: 472px;
+}
+
+.app-profile__game-result {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  padding-bottom: 16px;
+}
+
+.app-profile__game-infos {
+  padding-bottom: 12px;
+}
+
+.app-profile__game-type {
+  line-height: 24px;
+  font-weight: 700;
+}
+
+.app-profile__game-date {
+  font-size: 12px;
+}
+
+.app-profile__game-date .app-icon {
+  font-size: 12px;
+}
+
+.app-profile__game-type .app-icon {
+  color: rgba(0,0,0,.54);
+  font-size: 16px;
+  position: relative;
+  top: 3px;
+  margin-left: 4px;
+}
+
+.app-profile__game-date .app-icon {
+  color: rgba(0,0,0,.54);
+  font-size: 16px;
+  position: relative;
+  top: 2px;
+}
+
+.app-profile__game-infos .app-icon:first-child {
+  margin-left: 0;
+}
+
+.app-profile__game-player {
+  text-align: center;
+  display: inline-block;
+  width: 230px;
+}
+
+.app-profile__game-avatar {
+  padding: 8px 0;
+}
+
+.app-profile__game-avatar .app-icon {
+  vertical-align: middle;
+}
+
+.app-profile__game-name {
+  font-size: 16px;
+}
+
+.app-profile__game-points {
+  margin-top: 8px;
+  font-size: 16px;
+}
+
+.app-profile__game-spinner {
+  width: 100%;
+  text-align: center;
+  margin: 8px 0;
 }
 
 .app-element__head {
@@ -2781,6 +2929,39 @@ a {
   }
 }
 
+@media screen and (max-width: 799px) {
+  .app-card__profile-stats {
+    padding-top: 24px;
+    padding: 24px 8px
+  }
+
+  .app-profile__game-board {
+    width: 33%;
+  }
+
+  .app-profile__game-content {
+    margin-left: calc(33% + 8px);
+    width: calc(100% - 33% - 8px);
+  }
+
+  .app-profile__game-infos {
+    padding-bottom: 0;
+  }
+  
+  .app-profile__game-result {
+    padding-bottom: 0;
+  }
+  
+  .app-profile__game-player {
+    width: calc(50% - 6px);
+    margin-right: 8px;
+  }
+
+  .app-profile__game-player:last-child {
+    margin-right: 0;
+  }
+}
+
 @media screen and (max-width: 745px) {
 
   .app-game__message {
@@ -2865,6 +3046,7 @@ a {
 }
 
 @media screen and (min-width: 600px) {
+
   .app-form--inline .app-form__textfield {
     display:inline-block;
     margin-bottom: 0
@@ -2909,6 +3091,48 @@ a {
 }
 
 @media screen and (max-width: 599px) {
+
+  .app-card__profile-title {
+    height: 60px;
+    padding-bottom: 24px;
+    padding-top: 8px;
+  }
+
+  .app-card__profile-title .app-profile__action {
+    top: 8px;
+    right: 8px;
+  }
+
+  .app-card__profile-avatar {
+    top: 39px;
+  }
+
+  .app-card__profile-avatar .app-avatar{
+    width: 40px;
+    height: 40px;
+  }
+
+  .app-card__profile-title-text {
+    font-size: 16px;
+    height: 24px;
+  }
+
+  .app-card__profile-stats {
+    padding: 8px;
+  }
+
+  .app-profile__game-board {
+    display: none;
+  }
+
+  .app-profile__game-content {
+    margin-left: 0;
+    width: 100%;
+  }
+
+  .app-profile__game-avatar {
+    padding: 4px 0;
+  }
   
   .app-table.app-table--game {
     font-size: 12px;
