--- a/public/app/profile/templates/modal-profile.html
+++ b/public/app/profile/templates/modal-profile.html
@@ -27,7 +27,7 @@
                 <a modal-close
                    ng-href="/profile/{{ profile.uid }}#trophies" 
                    class="app-button mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
-                   ng-bind="'trophies'|translate">
+                   ng-bind="'trophies.title'|translate">
                 </a>
                 <a modal-close
                    ng-href="/profile/{{ profile.uid }}"
