--- a/public/app/profile/templates/profile.html
+++ b/public/app/profile/templates/profile.html
@@ -21,7 +21,7 @@
         <a ng-click="showMenu('trophies')" 
            class="app-button mdl-button mdl-js-button mdl-js-ripple-effect"
            ng-class="{'is-active': activeMenu === 'trophies'}">
-            {{ 'trophies'|translate }}
+            {{ 'trophies.title'|translate }}
         </a>
     </div>
 </div>
