--- a/public/css/style.css
+++ b/public/css/style.css
@@ -404,7 +404,7 @@ a {
   line-height: 15px;
   overflow-x: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap
+  white-space: nowrap;
 }
 
 .app-form__textfield>textarea {
@@ -434,7 +434,7 @@ a {
   transform: translate(0,0);
   font-size: 12px;
   line-height: 15px;
-  text-overflow: ellipsis
+  text-overflow: ellipsis;
 }
 
 .app-form__textfield--float-label>input:not(:focus).ng-not-empty~label,
@@ -447,7 +447,7 @@ a {
   font-size: 12px;
   line-height: 15px;
   transform: translate(0,0);
-  text-overflow: ellipsis
+  text-overflow: ellipsis;
 }
 
 .app-form__textfield--wrap-label {
@@ -971,12 +971,11 @@ a {
 
 .app-profile__more {
   position: relative;
-  margin-top: 16px;
+  margin: 16px 8px 0 8px;
 }
 
 .app-profile__more .app-button {
   margin-right: 8px;
-  color: #DB4437;
 }
 
 .app-profile__link {
@@ -1012,14 +1011,20 @@ a {
 
 .app-card__profile-avatar {
   position: absolute;
-  left: 28px;
+  left: 32px;
   top: 54px;
 }
 
 .app-card__profile-stats {
   max-width: 500px;
-  margin: 0 auto;
-  padding-bottom: 24px;
+}
+
+.app-card__profile-actions {
+  padding-top: 24px;
+}
+
+.app-card__profile-actions .app-button {
+  min-width: initial;
 }
 
 .app-card__profile-actions .app-button.is-active {
@@ -1139,7 +1144,7 @@ a {
 }
 
 .app-profile__info-game {
-  margin-top: 20px;
+  margin: 8px;
 }
 
 .app-profile__stats {
@@ -1240,7 +1245,11 @@ a {
   text-align: center;
   font-size: 16px;
   font-weight: 700;
-  padding-bottom: 16px;
+  padding-bottom: 8px;
+}
+
+.app-profile__game-result-text {
+  margin-bottom: 4px;
 }
 
 .app-profile__game-infos {
@@ -1249,6 +1258,7 @@ a {
 
 .app-profile__game-type {
   line-height: 24px;
+  text-transform: uppercase;
   font-weight: 700;
 }
 
@@ -1294,12 +1304,19 @@ a {
 }
 
 .app-profile__game-name {
-  font-size: 16px;
+  width: 100%;
+  font-size: 18px;
+  line-height: 24px;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .app-profile__game-points {
+  font-size: 18px;
   margin-top: 8px;
-  font-size: 16px;
+  line-height: 24px;
 }
 
 .app-profile__game-spinner {
@@ -2930,10 +2947,7 @@ a {
 }
 
 @media screen and (max-width: 799px) {
-  .app-card__profile-stats {
-    padding-top: 24px;
-    padding: 24px 8px
-  }
+  
 
   .app-profile__game-board {
     width: 33%;
@@ -2947,14 +2961,45 @@ a {
   .app-profile__game-infos {
     padding-bottom: 0;
   }
+
+  .app-profile__game-type {
+    line-height: 20px;
+    text-transform: uppercase;
+  }
   
   .app-profile__game-result {
+    font-size: 15px;
     padding-bottom: 0;
+    line-height: 16px;
   }
   
   .app-profile__game-player {
     width: calc(50% - 6px);
     margin-right: 8px;
+  }
+
+  .app-profile__game-name {
+    font-size: 15px;
+    line-height: 20px;
+  }
+
+  .app-profile__game-avatar {
+    padding: 4px 0;
+  }
+
+  .app-profile__game-avatar .app-icon {
+    font-size: 20px;
+  }
+
+  .app-profile__game-avatar .app-avatar {
+    width: 40px;
+    height: 40px;
+  }
+
+  .app-profile__game-points {
+    font-size: 15px;
+    margin-top: 0;
+    line-height: 20px;
   }
 
   .app-profile__game-player:last-child {
@@ -3091,6 +3136,20 @@ a {
 }
 
 @media screen and (max-width: 599px) {
+  
+  .app-profile__info-game {
+    margin: 8px 0;
+  }
+
+  .app-profile__more {
+    margin: 8px 0;
+  }
+
+  .app-profile__more .app-button {
+    min-width: initial;
+    margin-right: 4px;
+    padding: 0 12px;
+  }
 
   .app-card__profile-title {
     height: 60px;
@@ -3101,6 +3160,10 @@ a {
   .app-card__profile-title .app-profile__action {
     top: 8px;
     right: 8px;
+  }
+
+  .app-card__profile-actions .app-button {
+    padding: 0 12px;
   }
 
   .app-card__profile-avatar {
@@ -3117,10 +3180,6 @@ a {
     height: 24px;
   }
 
-  .app-card__profile-stats {
-    padding: 8px;
-  }
-
   .app-profile__game-board {
     display: none;
   }
@@ -3130,9 +3189,27 @@ a {
     width: 100%;
   }
 
+  .app-profile__game-type {
+    font-size: 13px;
+  }
+
   .app-profile__game-avatar {
     padding: 4px 0;
   }
+
+  .app-profile__game-avatar .app-icon {
+    font-size: 20px;
+  }
+
+  .app-profile__game-name {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .app-profile__game-points {
+    margin-top: 0;
+    font-size: 14px;
+}
   
   .app-table.app-table--game {
     font-size: 12px;
