--- a/public/css/style-ar.css
+++ b/public/css/style-ar.css
@@ -290,6 +290,10 @@
    right: initial;
 }
 
+.app-profile__link {
+  float: left;
+}
+
 .app-profile__card-avatar {
   left: initial;
   right: 60px;
