--- a/public/app/profile/templates/modal-profile.html
+++ b/public/app/profile/templates/modal-profile.html
@@ -22,23 +22,18 @@
                  class="app-profile__more">
                 <a modal-close
                    ng-href="/profile/{{ profile.uid }}#blitz" 
-                   class="app-button mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
+                   class="app-button mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
                    ng-bind="'blitz'|translate">
                 </a>
                 <a modal-close
                    ng-href="/profile/{{ profile.uid }}#rapid" 
-                   class="app-button mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
+                   class="app-button mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
                    ng-bind="'rapid'|translate">
                 </a>
                 <a modal-close
                    ng-href="/profile/{{ profile.uid }}#trophies" 
-                   class="app-button mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
+                   class="app-button mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
                    ng-bind="'trophies.title'|translate">
-                </a>
-                <a modal-close
-                   ng-href="/profile/{{ profile.uid }}"
-                   class="app-profile__link mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored">
-                    <i class="app-icon material-icons">more_horiz</i>
                 </a>
             </div>
         </div>
