--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1136,7 +1136,7 @@ a {
 }
 
 .app-profile__info-game {
-  margin: 16px;
+  margin: 8px;
 }
 
 .app-profile__stats {
@@ -1242,6 +1242,10 @@ a {
 
 .app-profile__game-result-text {
   margin-bottom: 4px;
+}
+
+.app-profile__game-infos {
+  padding-bottom: 12px;
 }
 
 .app-profile__game-type {
